2003-10-21  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-pop-event): also recenter when switching to an IM
	buffer from here

2003-03-23  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-kill): call toc-close and tnt-shutdown before giving
	the "Already offline" error, just to be sure everything gets
	cleaned up.
	(tnt-join-chat): recenter when entering the chat buffer.

2003-02-27  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-im): recenter when entering the im buffer

2002-10-23  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-html-regexps-to-replace): added &quot;
	(tnt-buddy-list-menu): added a newline

2002-10-17  Matthias Granberry  <matthias@utdallas.edu>
	* tnt.el (tnt-default-info-message): initial support for setting
	profiles.
	(tnt-set-info): sends user-defined profile to TOC server.
	(tnt-get-info-msg): modified tnt-get-away-msg to use with profile
	strings.
	(tnt-inhibit-key-bindings): added "C-x t f" for tnt-set-info.
	(tnt-buddy-list-mode-map): added "f" for tnt-set-info.
	(tnt-customize): removed second definition of tnt-customize

2002-10-08  Matthias Granberry  <matthias@utdallas.edu>

	* tnt.el (tnt-play-sound): incorporated Doug Alcom (lathi)'s patch
	to allow xemacs to play sounds without native sound support.

2002-10-08  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-customize): just calls (customize "tnt").
	(tnt-inhibit-key-bindings): added "C-x t c" for tnt-customize.
	(tnt-buddy-list-mode-map): added "c" for tnt-customize.
	(tnt-buddy-list-menu): added "[?] help" to each menu.

2002-10-07  Matthias Granberry <matthias@utdallas.edu>
	* tnt.el (tnt-show-help): added tnt-pounce-list, changed
	tnt-pounce-add to tnt-toggle-pounce, and changed key binding for
	tnt-kill.
	* README: updated for new key bindings

2002-10-02  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-build-buddy-buffer): now display non-buddy IMs and